# shpkg

./: README.md  pyproject.toml
shpkg/: __main__.py  install.py  list_pkg.py  remove.py  update.py  update_all.py
