[project]
name = "shpkg"
version = "0.1.2"
description = "packaging made fun and easy"
authors = [
    { name = "sctech", email = "gamerselimiko@gmail.com" }
]
dependencies = [
    "requests",
    "click"
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent"
]
readme = "README.md"
urls = { homepage = "https://github.com/shpkg/shpkg" }

[project.scripts]
shpkg = "shpkg.__main__:main"

[tool.setuptools]
packages = ["shpkg"]
include-package-data = true

[tool.setuptools.package-data]
"shpkg" = ["data/*.json", "config/*.ini"]